@@ -1,3 +1,9 @@
+obsplus master
+  - obsplus.events.validate
+    * Loosened check for duplicate pick ids to only check for duplicate
+      P and S phases
+    * Made amplitude time window check skip over rejected amplitudes
+
 obsplus 0.2.2
   - Added support for python 3.9, dropped python 3.6
 
